@@ -24,6 +24,10 @@ RELEASE 0.96 - XXX
 
   - Support passing environment override keyword arguments to Command().
 
+  - Fix use of $MSVS_IGNORE_IDE_PATHS, which was broken when we added
+    support for $MSVS_USE_MFC_DIRS last release.
+
+
 
 RELEASE 0.95 - Mon, 08 Mar 2004 06:43:20 -0600
 
